--- a/src/WebSite/ClnqWebSite/src/app/main/accueil.component.html
+++ b/src/WebSite/ClnqWebSite/src/app/main/accueil.component.html
@@ -77,15 +77,20 @@
                     <!-- chart bar -->
                     <dxi-item>
                         <dx-chart id="chart" [dataSource]="dataChartBar" title="Visite par semaine">
+                           
                             <dxi-series
                             argumentField="dataTitle"
                             valueField="val"
                             name="Visites"
                             type="bar"
                             color="#EFC3CA"
-                            >
-                            </dxi-series>
+                            ></dxi-series>
+                           
+
                         </dx-chart>
+
+                     
+
                     
                     </dxi-item>
 
